# ChangeLog for dev-perl/Exporter-Tiny
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Exporter-Tiny/ChangeLog,v 1.8 2015/04/11 17:47:07 zlogene Exp $

  11 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> Exporter-Tiny-0.42.0.ebuild:
  Add ~arm64 keyword wrt bug #543632

  05 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> Exporter-Tiny-0.42.0.ebuild:
  Add ~sh keyword wrt bug #543632

  05 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> Exporter-Tiny-0.42.0.ebuild:
  Add ~mips keyword wrt bug #543632

  05 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> Exporter-Tiny-0.42.0.ebuild:
  Add ~s390 keyword wrt bug #543632

  05 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> Exporter-Tiny-0.42.0.ebuild:
  Add ~ppc keyword wrt bug #543312

  28 Mar 2015; Markus Meier <maekke@gentoo.org> Exporter-Tiny-0.42.0.ebuild:
  add ~arm, bug #543632

  19 Mar 2015; Jeroen Roovers <jer@gentoo.org> Exporter-Tiny-0.42.0.ebuild:
  Marked ~hppa (bug #543632).

*Exporter-Tiny-0.42.0 (21 Feb 2015)

  21 Feb 2015; Andreas K. Huettel <dilfridge@gentoo.org>
  +Exporter-Tiny-0.42.0.ebuild, +metadata.xml:
  New package, dependency of dev-perl/MongoDB